@@ -4,6 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Fix error in suggestions when there is no solr response.
+  [buchi]
+
 - Make sure that string attributes of a PloneFlare are always utf-8 encoded
   byte strings to be consistent with catalog brains.
   [buchi]
